--- a/html/index.html
+++ b/html/index.html
@@ -157,8 +157,6 @@
 
   <div class="blankHM"></div>
 
-
-
   <div class="wrapper">
   <div class="element">
     <div class="forFullResponsiveGrid">
@@ -238,9 +236,9 @@
       </div>
 
     </div>
-    <div class="Grid-cell borderRadiusMax">
+    <div class="Grid-cell">
       <a href="https://www.linkedin.com/in/vicky-wyq/" target="_blank" title="LinkedIn">
-        <img class="iconM hoverGrey100 paddingMax  cardBorder" src="./icon/in.svg" alt="LinkedIn">
+        <img class="iconM hoverGrey100 paddingMax borderRadiusMax cardBorder" src="./icon/in.svg" alt="LinkedIn">
       </a>
     </div>
 
@@ -297,7 +295,6 @@
 
 
 
-  <div class="blankHS"></div>
   <!-- Arrow -->
   <div class="blankHS"></div>
 
@@ -321,13 +318,88 @@
   <!-- Content -->
 
   <div class="wrapper">
+
     <div class="Grid Grid--gutters Grid--cols-2">
       <div class="Grid-cell">
         <div class="element">
           <a class="no-hover-effect">
             <div class="elementCard LASO float cardBorder shadowBoxLt">
               <div class="img__wrap">
-                <img class="img__img" alt="Work Samples" src="./projectImages/Cover_worksample.png" />
+                <img class="img__img" alt="Work Samples" src="./projectImages/Cover_BYP_AppB2B.png" />
+                <div class="img__description">
+                  <div class="input-field">
+                    <div class="column">
+                      <label for="password">
+                        <h5>Password</h5>
+                      </label>
+                      <input class="PWinputLanding" type="password" id="password" placeholder="Enter password">
+
+                      <div class="pwIncorrectHeight">
+                        <span id="pwIncorrect">Password is incorrect </span>
+                      </div>
+                    </div>
+                    <button class="passwordArr" type="submit">
+                      <img src="./icon/arrow-forward.svg" alt="Enter">
+                      <!--  <i class="fas fa-chevron-right"></i> -->
+                    </button>
+                  </div>
+                </div>
+                <div class="element">
+                  <div class="element">
+                    <h5>Password is required </h5>
+                    <h3 class="arrCard" data-aos="fade-up"><strong>B2B SaaS | Onboarding & Subscription </strong></h3>
+                    <h4>Increase the business onboarding understand BYP & improve the subscription rate </h4>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="element">
+          <a class="no-hover-effect">
+            <div class="elementCard LASO float cardBorder shadowBoxLt">
+              <div class="img__wrap">
+                <img class="img__img" alt="Work Samples" src="./projectImages/Cover_BYP_B2C.png" />
+                <div class="img__description">
+                  <div class="input-field">
+                    <div class="column">
+                      <label for="password">
+                        <h5>Password</h5>
+                      </label>
+                      <input class="PWinputLanding" type="password" id="rxZero" placeholder="Enter password">
+
+                      <div class="pwIncorrectHeight">
+                        <span id="pwIncorrect">Password is incorrect </span>
+                      </div>
+                    </div>
+                    <button class="passwordArr" type="submit">
+                      <img src="./icon/arrow-forward.svg" alt="Enter">
+                      <!--  <i class="fas fa-chevron-right"></i> -->
+                    </button>
+                  </div>
+                </div>
+                <div class="element">
+                  <div class="element">
+                    <h5>Password is required </h5>
+                    <h3 class="arrCard" data-aos="fade-up"><strong>Enhancing the Consumer Booking Flow</strong></h3>
+                    <h4>Increase conversion rates by reducing booking abandonment</h4>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="Grid Grid--gutters Grid--cols-2">
+      <div class="Grid-cell">
+        <div class="element">
+          <a class="no-hover-effect">
+            <div class="elementCard LASO float cardBorder shadowBoxLt">
+              <div class="img__wrap">
+                <img class="img__img" alt="Work Samples" src="./projectImages/Cover_LASO_AdminPanel.png" />
                 <div class="img__description">
                   <div class="input-field">
                     <div class="column">
@@ -350,7 +422,7 @@
                   <div class="element">
                     <h5>Password is required </h5>
                     <h3 class="arrCard" data-aos="fade-up"><strong>Admin Panel 0 - 1</strong></h3>
-                    <h4>Extensive startup experience with full design process immersion and diverse skill set</h4>
+                    <h4>Focus on diffetent type of user management</h4>
                   </div>
                 </div>
               </div>
@@ -363,7 +435,7 @@
           <a class="no-hover-effect">
             <div class="elementCard LASO float cardBorder shadowBoxLt">
               <div class="img__wrap">
-                <img class="img__img" alt="Work Samples" src="./projectImages/Cover_worksample.png" />
+                <img class="img__img" alt="Work Samples" src="./projectImages/Cover_LASO_RX0.png" />
                 <div class="img__description">
                   <div class="input-field">
                     <div class="column">
@@ -386,7 +458,7 @@
                   <div class="element">
                     <h5>Password is required </h5>
                     <h3 class="arrCard" data-aos="fade-up"><strong>RX Zero | Business Shift</strong></h3>
-                    <h4>Extensive startup experience with full design process immersion and diverse skill set</h4>
+                    <h4>Focus on business shift overall idea</h4>
                   </div>
                 </div>
               </div>
@@ -403,7 +475,7 @@
           <a class="no-hover-effect">
             <div class="elementCard LASO float cardBorder shadowBoxLt">
               <div class="img__wrap">
-                <img class="img__img" alt="Work Samples" src="./projectImages/Cover_worksample.png" />
+                <img class="img__img" alt="Work Samples" src="./projectImages/Cover_LASO_CostCalculator.png" />
                 <div class="img__description">
                   <div class="input-field">
                     <div class="column">
@@ -425,8 +497,8 @@
                 <div class="element">
                   <div class="element">
                     <h5>Password is required </h5>
-                    <h3 class="arrCard" data-aos="fade-up"><strong>Product page update</strong></h3>
-                    <h4>Extensive startup experience with full design process immersion and diverse skill set</h4>
+                    <h3 class="arrCard" data-aos="fade-up"><strong>Cost-benefit calculator</strong></h3>
+                    <h4>Focus on user understand RX Zero business model, improve subscription rate</h4>
                   </div>
                 </div>
               </div>
@@ -452,43 +524,7 @@
       </div>
 
     </div>
-    <div class="Grid Grid--gutters Grid--cols-2">
-      <div class="Grid-cell">
-        <div class="element">
-          <a class="no-hover-effect" href="/glorify/">
-            <div class="elementCard GLORIFY float cardBorder shadowBoxLt">
-              <img src="./projectImages/Cover_worksample.png" alt="Booking">
-              <div class="element">
-                <div class="element">
-                  <h5>Booking | Business-Facing</h5>
-                  <h3 class="arrCard" data-aos="fade-up"><strong>B2B SaaS - Onboarding & Subscription</strong></h3>
-                  <h4>Focused on simplifying and refining the onboarding and subscription processes, we aim to facilitate a smooth transition for our B2B clients. This approach is geared towards improving engagement and adoption rates, ultimately driving business growth and customer satisfaction.</h4>
-                </div>
-              </div>
-            </div>
-          </a>
-        </div>
-      </div>
-      <div class="Grid-cell">
-        <div class="element">
-          <a class="no-hover-effect" href="/glorify/">
-            <div class="elementCard GLORIFY float cardBorder shadowBoxLt">
-              <img src="./projectImages/Cover_worksample.png" alt="Consumer-Facing">
-              <div class="element">
-                <div class="element">
-                  <h5>Service Booking App | Consumer-Facing</h5>
-                  <h3 class="arrCard" data-aos="fade-up"><strong>Enhancing the Consumer Booking Flow</strong></h3>
-                  <h4>Enhancing your booking experience to ensure seamless appointment scheduling, our goal is to
-                    boost conversion rates and minimize booking drop-offs. This streamlined process is designed not
-                    only to increase revenue but also to enhance customer loyalty.</h4>
-                </div>
-              </div>
-            </div>
-          </a>
-        </div>
-      </div>
 
-    </div>
     <div class="Grid Grid--gutters Grid--cols-2">
       <div class="Grid-cell">
         <div class="element">
@@ -541,7 +577,7 @@
         <div class="Grid-cell">
             <div class="element">
                 <h2 class="tArrow">
-                    Design System &amp; Navigation <img class="seArrow" src="/icon/arrow-se.svg" alt="icon arrow">
+                    Design System <img class="seArrow" src="/icon/arrow-se.svg" alt="icon arrow">
                 </h2>
             </div>
         </div>
