--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
         <div class="Grid-cell">
           <div class="element">
             <a class="no-hover-effect">
-              <div class="elementCard LASO float cardBorder shadowBoxLt">
+              <div class="elementCard LASO float cardBorder borderRadiusS shadowBoxLt">
                 <div class="img__wrap">
                   <img class="img__img" alt="Work Samples" src="./projectImages/Cover_worksample.png" />
                   <div class="img__description">
@@ -310,7 +310,7 @@
         <div class="Grid-cell">
           <div class="element">
             <a class="no-hover-effect">
-              <div class="elementCard LASO float cardBorder shadowBoxLt">
+              <div class="elementCard LASO float cardBorder borderRadiusS shadowBoxLt">
                 <div class="img__wrap">
                   <img class="img__img" alt="Work Samples" src="./projectImages/Cover_worksample.png" />
                   <div class="img__description">
@@ -350,7 +350,7 @@
         <div class="Grid-cell">
           <div class="element">
             <a class="no-hover-effect">
-              <div class="elementCard LASO float cardBorder shadowBoxLt">
+              <div class="elementCard LASO float cardBorder borderRadiusS shadowBoxLt">
                 <div class="img__wrap">
                   <img class="img__img" alt="Work Samples" src="./projectImages/Cover_worksample.png" />
                   <div class="img__description">
@@ -386,7 +386,7 @@
         <div class="Grid-cell">
           <div class="element">
             <a class="no-hover-effect" href="/glorify/">
-              <div class="elementCard GLORIFY float cardBorder shadowBoxLt">
+              <div class="elementCard GLORIFY float cardBorder borderRadiusS shadowBoxLt">
                 <img src="./projectImages/Cover_Glorify.png" alt="GLORIFY">
                 <div class="element">
                   <div class="element">
@@ -405,7 +405,7 @@
         <div class="Grid-cell">
           <div class="element">
             <a class="no-hover-effect" href="/glorify/">
-              <div class="elementCard GLORIFY float cardBorder shadowBoxLt">
+              <div class="elementCard GLORIFY float cardBorder borderRadiusS shadowBoxLt">
                 <img src="./projectImages/Cover_worksample.png" alt="Booking">
                 <div class="element">
                   <div class="element">
@@ -421,7 +421,7 @@
         <div class="Grid-cell">
           <div class="element">
             <a class="no-hover-effect" href="/glorify/">
-              <div class="elementCard GLORIFY float cardBorder shadowBoxLt">
+              <div class="elementCard GLORIFY float cardBorder borderRadiusS shadowBoxLt">
                 <img src="./projectImages/Cover_worksample.png" alt="Consumer-Facing">
                 <div class="element">
                   <div class="element">
@@ -443,7 +443,7 @@
           <div class="element">
             <a class="no-hover-effect" href="/appointa/">
               <div class="">
-                <div class="elementCard float cardBorder APPOINTA shadowBoxLt">
+                <div class="elementCard float cardBorder borderRadiusS APPOINTA shadowBoxLt">
                   <img src="./projectImages/Cover_APPOINTA.png" alt="APPOINTA">
                   <div class="element">
                     <div class="element">
@@ -461,7 +461,7 @@
         <div class="Grid-cell">
           <div class="element">
             <a class="no-hover-effect" href="/seer/">
-              <div class="elementCard float cardBorder SEER shadowBoxLt">
+              <div class="elementCard float cardBorder borderRadiusS SEER shadowBoxLt">
                 <img src="./projectImages/Cover_SEER.png" alt="SEER">
                 <div class="element">
                   <div class="element">
@@ -500,7 +500,7 @@
           <div class="element">
             <a class="no-hover-effect" href="/design_system/">
               <div class="">
-                <div class="elementCard float cardBorder shadowBoxLt">
+                <div class="elementCard float cardBorder borderRadiusS shadowBoxLt">
                   <img src="./projectImages/vicky_website.svg" alt="vickywang.me">
                   <div class="element">
                     <div class="element">
@@ -520,7 +520,7 @@
           <div class="element">
             <a class="no-hover-effect" href="/navigation/">
               <div class="">
-                <div class="elementCard float cardBorder shadowBoxLt">
+                <div class="elementCard float cardBorder borderRadiusS shadowBoxLt">
                   <img src="./projectImages/vicky_website.svg" alt="vickywang.me">
                   <div class="element">
                     <div class="element">
